tests/macros/duplicate/filter_async.stderr
error: unknown question option `filter_async`
 --> $DIR/filter_async.rs:3:9
  |
3 |         filter_async: todo!(),
  |         ^^^^^^^^^^^^
