tests/macros/duplicate/filter_async.rs
fn main() {
    let q = inquisition::questions![input {
        filter_async: todo!(),
        filter_async: todo!(),
    }];
}
